FIXED desktop ver. of dashboard resize & needle alignment issues

--- a/src/home/components/Dashboard/index.module.css
+++ b/src/home/components/Dashboard/index.module.css
@@ -1,6 +1,7 @@
 .box_container {
-  padding-top: 80px;
-  padding-left: 110px;
+  width: 100%;
+  margin-top: 70px;
+  margin-left: 110px;
   display: flex;
   flex-direction: row;
   /* transform: translateX(8%); */
@@ -8,12 +9,12 @@
 }
 
 .left_box {
-  padding-right: 20px;
+  position: relative;
+  /* padding-right: 20px; */
+  padding-top: 70px;
   margin-left: 15px;
-  padding-top: 60px;
   display: flex;
   flex-direction: column;
-  /* width: 700px; */
   width: 30%;
   /* border: 2px solid red; */
 }
@@ -23,7 +24,10 @@
   color: transparent;
   background-image: linear-gradient(#dcf45d, #2cbd35);
   font-size: 60px;
-  font-weight: bold;
+  font-weight: 600;
+  line-height: 70px; 
+  letter-spacing: -1.32px;
+  position: relative;
   /* border: 2px solid pink; */
 }
 
@@ -33,10 +37,11 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px; /* 171.429% */
+  line-height: 24px; 
   letter-spacing: -0.308px;
   margin-top: 20px; 
-  padding-right: 70px;
+  padding-right: 100px;
+  /* border: 1px dashed teal; */
 }
 
 .enter_box {
@@ -44,6 +49,7 @@
 }
 
 .enter_but {
+  margin: auto;
   font-weight: bold;
   width: 139px;
   height: 48px;
@@ -60,7 +66,7 @@
 }
 
 /* with needle .gif */
-.right_box {
+/* .right_box {
   display: flex;
   flex-direction: column;
   width: 70%;
@@ -77,7 +83,34 @@
   margin-top: 20vh;
   width: 28.5vw;
   height: 15vh; 
-  /* border: 2px dashed red; */
+} */
+
+.right_box {
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  position: relative;
+  /* border: 2px solid cornflowerblue; */
+}
+
+.right_box_img{
+  display: block;
+  margin: 20px auto;
+  position: relative;
+  align-items: center;
+  height: auto;
+  max-width: 100%;
+  /* border: 1px dashed darkkhaki; */
+}
+
+.needle{
+  position: absolute;
+  padding-left: 13%;
+  padding-right: 44%;
+  margin-top: 18%;
+  width: 100%;
+  height: auto;
+  /* border: 1px solid palegreen; */
 }
 
 
@@ -106,7 +139,7 @@
   border: 1px dashed pink;
 } */
 
-@media (max-width: 1260px) {
+@media (max-width: 576px) {
   .box_container {
     width: 100%;
     margin: 0;
@@ -190,35 +223,23 @@
   
   .right_box_img{
     display: block;
-    margin: auto;
-
-    height: 29.94vh;
-
     margin: 0 auto;
     position: relative;
     align-items: center;
     height: auto;
     width: 100%;
-
-    /* width:fit-content;
-    align-items: center;
-    margin: auto; */
-    /* border: 1px dashed darkkhaki; */
+    border: 1px dashed darkkhaki;
   }
   
   .needle{
+    margin: 0;
+    padding: 0;
+    display: block;
     position: absolute;
     margin-left: 12%;
     margin-top: 15.5%;
-    width: 40%;
+    width: 42.5%;
     height: 20%; 
-
-    /* margin-left: 14vw;
-    margin-top: 7.5vh;
-    width: 41.5vw;
-    height: 6.5vh;  */
-
     /* border: 1px solid yellow; */
   }
-
 }
